[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/scenes/game/Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/assets/Background/Cherry Blossoms and Castle.png" type="Texture" id=2]
[ext_resource path="res://src/assets/Fonts/Font_72.res" type="DynamicFont" id=3]
[ext_resource path="res://src/scenes/game/Game.gd" type="Script" id=4]
[ext_resource path="res://src/assets/Buttons/Button Template Blue.png" type="Texture" id=5]
[ext_resource path="res://src/assets/Buttons/Button Template Green.png" type="Texture" id=6]
[ext_resource path="res://src/scenes/menu/GameOverPanel.tscn" type="PackedScene" id=7]

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1080.0
margin_bottom = 1920.0
rect_min_size = Vector2( 1080, 1920 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="UI/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -456.0
margin_top = -152.0
margin_right = 506.0
margin_bottom = -30.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreUI" type="Control" parent="UI"]
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="UI/ScoreUI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -80.0
margin_right = 80.0
margin_bottom = 87.0
custom_fonts/font = ExtResource( 3 )
text = "0000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsUI" type="Control" parent="UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -424.0
margin_bottom = -424.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/ControlsUI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filler1" type="Control" parent="UI/ControlsUI/HBoxContainer"]
margin_right = 269.0
margin_bottom = 128.0
size_flags_horizontal = 3

[node name="DownButton" type="TextureButton" parent="UI/ControlsUI/HBoxContainer"]
margin_left = 273.0
margin_right = 401.0
margin_bottom = 128.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filler2" type="Control" parent="UI/ControlsUI/HBoxContainer"]
margin_left = 405.0
margin_right = 674.0
margin_bottom = 128.0
size_flags_horizontal = 3

[node name="RotateButton" type="TextureButton" parent="UI/ControlsUI/HBoxContainer"]
margin_left = 678.0
margin_right = 806.0
margin_bottom = 128.0
texture_normal = ExtResource( 6 )

[node name="Filler3" type="Control" parent="UI/ControlsUI/HBoxContainer"]
margin_left = 810.0
margin_right = 1080.0
margin_bottom = 128.0
size_flags_horizontal = 3

[node name="Board" parent="." instance=ExtResource( 1 )]
position = Vector2( 220, 320 )

[node name="GameOverPanel" parent="." instance=ExtResource( 7 )]
offset = Vector2( 1080, 0 )
transform = Transform2D( 1, 0, 0, 1, 1080, 0 )

[connection signal="pressed" from="UI/ControlsUI/HBoxContainer/DownButton" to="Board" method="_on_DownButton_pressed"]
[connection signal="pressed" from="UI/ControlsUI/HBoxContainer/RotateButton" to="Board" method="_on_RotateButton_pressed"]
[connection signal="game_over" from="Board" to="." method="_on_Board_game_over"]
[connection signal="score_updated" from="Board" to="." method="_on_Board_score_updated"]
[connection signal="game_over_quit" from="GameOverPanel" to="." method="_on_GameOverPanel_game_over_quit"]
[connection signal="game_over_restart" from="GameOverPanel" to="." method="_on_GameOverPanel_game_over_restart"]
